<resources>

    <string name="m_test_music">Music</string>
    <string name="m_test_backup">Backup</string>
    <string name="m_test_friends">Friends</string>
    <string name="m_test_favor">Favor</string>
    <string name="m_test_name">测试demo</string>

    <string name="m_test_lamp">Lamp</string>
    <string name="m_test_weather">Weather</string>
    <string name="m_test_face">Face</string>

    <string name="m_test_visibility">Visibility</string>
    <string name="m_test_different_style">Different style</string>
    <string name="m_test_with_view_pager">With ViewPager</string>

    <string name="m_test_behavior_sample_title" translatable="false">com.test1moudle.v.views.SampleTitleBehavior</string>

    <string name="m_test_no_animation_shifting_mode_item_shifting_mode_icon" translatable="false">no animation/ shifting mode/ item shifting mode/ icon</string>
    <string name="m_test_no_item_shifting_mode_icon" translatable="false">no item shifting mode/ icon</string>
    <string name="m_test_no_shifting_mode_item_shifting_mode_icon" translatable="false">no shifting mode/ item shifting mode/ icon</string>
    <string name="m_test_no_animation_shifting_mode_item_shifting_mode_text" translatable="false">no animation/ shifting mode/ item shifting mode/ text</string>
    <string name="m_test_no_shifting_mode_item_shift_mode_text" translatable="false">no shifting mode/ item shift mode/ text</string>
    <string name="m_test_no_animation_shifting_mode_item_shifting_mode" translatable="false">no animation/ shifting mode/ item shifting mode</string>
    <string name="m_test_no_animation_item_shifting_mode" translatable="false">no animation/ item shifting mode</string>
    <string name="m_test_no_animation_shifting_mode" translatable="false">no animation/ shifting mode</string>
    <string name="m_test_no_icon" translatable="false">no icon</string>
    <string name="m_test_no_text" translatable="false">no text</string>
    <string name="m_test_no_item_shifting_mode" translatable="false">no item shifting mode</string>
    <string name="m_test_no_shifting_mode" translatable="false">no shifting mode</string>
    <string name="m_test_no_animation" translatable="false">no animation</string>
    <string name="m_test_normal" translatable="false">normal</string>
    <string name="m_test_setup_with_view_pager" translatable="false">setup with view pager</string>
    <string name="m_test_badge_view">badge view</string>
    <string name="m_test_with_padding" translatable="false">with padding</string>
    <string name="m_test_center_icon_only" translatable="false">center icon only</string>
    <string name="m_test_smaller_text" translatable="false">smaller text (custom font size)</string>
    <string name="m_test_bigger_icon" translatable="false">bigger icon (custom icon size)</string>
    <string name="m_test_custom_typeface" translatable="false">custom typeface</string>
    <string name="m_test_icon_selector" translatable="false">icon selector</string>
    <string name="m_test_icon_margin_top" translatable="false">icon margin top</string>
    <string name="m_test_tips_badge_removed" translatable="false">Badge is removed</string>
    <string name="m_test_unchecked_first_time" translatable="false">unchecked first time</string>
    <string name="m_test_center_fab">Center Fab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello">Hello World, UARTDemoActivity!</string>
    <string name="app_name">UART Loopback</string>
    <string name="baudRate">Baud rate</string>
    <string-array name="baud_rate">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>921600</item>
    </string-array>

    <string-array name="stop_bits">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="data_bits">
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="parity">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
        <item>Mark</item>
        <item>Space</item>
    </string-array>

    <string-array name="flow_control">
        <item>None</item>
        <item>CTS/RTS</item>
    </string-array>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
