<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_music"
        android:checked="true"
        android:icon="@drawable/m_test_ic_audiotrack_black_24dp"
        android:title="@string/m_test_music" />

    <item
        android:id="@+id/i_backup"
        android:icon="@drawable/m_test_ic_backup_black_24dp"
        android:title="@string/m_test_backup" />
    <!--must set the item title to empty-->
    <item
        android:id="@+id/i_empty"
        android:title="" />
    <item
        android:id="@+id/i_favor"
        android:icon="@drawable/m_test_ic_favorite_black_24dp"
        android:title="@string/m_test_favor" />
    <item
        android:id="@+id/i_visibility"
        android:icon="@drawable/m_test_ic_visibility_black_24dp"
        android:title="@string/m_test_visibility" />
</menu>